apps/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notesapp-ingress
spec:
  tls:
  - hosts:
    - notesapp.d9bcc6aece5445d2bb67.eastus.aksapp.io
  rules:
    - host: notesapp.d9bcc6aece5445d2bb67.eastus.aksapp.io
